crux-mir/test/symb_eval/crux/fail_return.good
test fail_return/3a1fbbbh::fail1[0]: returned Symbolic BV, FAILED
test fail_return/3a1fbbbh::fail2[0]: returned 123, FAILED

failures:

---- fail_return/3a1fbbbh::fail1[0] counterexamples ----
Failure for test/symb_eval/crux/fail_return.rs:8:22: 8:27: error: in fail_return/3a1fbbbh::fail1[0]
attempt to add with overflow
Failure for ./lib/crucible/lib.rs:36:41: 36:58 !test/symb_eval/crux/fail_return.rs:8:5: 8:33: error: in fail_return/3a1fbbbh::fail1[0]
MIR assertion at test/symb_eval/crux/fail_return.rs:8:5:
	x + 1 > x

---- fail_return/3a1fbbbh::fail2[0] counterexamples ----
Failure for test/symb_eval/crux/fail_return.rs:15:22: 15:27: error: in fail_return/3a1fbbbh::fail2[0]
attempt to add with overflow
Failure for ./lib/crucible/lib.rs:36:41: 36:58 !test/symb_eval/crux/fail_return.rs:15:5: 15:33: error: in fail_return/3a1fbbbh::fail2[0]
MIR assertion at test/symb_eval/crux/fail_return.rs:15:5:
	x + 1 > x

[Crux] Overall status: Invalid.
